[tool.poetry]
name = "vanbora_app"
version = "0.1.0"
description = "Sistema de reserva digital para transporte alternativo (van)"
authors = ["Seu Nome <seu@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^2.11.4"}
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 